--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
   </head>
   <body>
     <div id="app"></div>
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7561831028379613"
+     crossorigin="anonymous"></script>
+<!-- display -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7561831028379613"
+     data-ad-slot="9776848634"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </body>
 </html>
